@@ -814,3 +814,7 @@
 2012-12-14  Jiyoun Park
 
 	* Fix naviframe's resize object problem when item was deleted.
+
+2012-12-17  Chueon Park (Hermet)
+
+	* Fix the popup that returned invalid action buttons.
